# myowncodec

./: CMakeLists.txt  config.bat  config2.bat
CMakeModules/: FindFFMPEG.cmake  FindLibJpegTurbo.cmake  LibFindMacros.cmake
codec/: CMakeLists.txt
codec/include/: bitmapcodec.h  codecapi.h  codecimage.h  jpegreader.h  netutil.h  pmf.h  ppeg.h
codec/src/: bitmapcodec.cpp  jpegreader.cpp  pmfcodec.cpp  pmfreader.cpp  pmfwriter.cpp  ppeg.cpp  temp.cpp
codec/tools/: jpeg2pmf.cpp
gui/: CMakeLists.txt
gui/include/: VideoCanvas.h  VideoPlayer.h  myapp.h
gui/src/: VideoCanvas.cc  VideoCanvas.cpp  VideoPlayer.cpp  myapp.cc  myapp.cpp
include/: Bitmap.h  InputFrame.h  InputStream.h  VideoFrame.h  VideoStream.h
jpegreader/: CMakeLists.txt
jpegreader/include/: DirectoryReader.h  JpegReader.h
jpegreader/src/: DirectoryReader.cc  DirectoryReader.cpp  JpegReader.cc  JpegReader.cpp  stub.cc
jpegreader/test/: dirlisttest.cc  jpeg2bmp.cc  jpeg2bmp.cpp
pmf/: CMakeLists.txt
pmf/include/: PmfDecoder.h  PmfReader.h  PmfWriter.h  pmf.h
pmf/src/: PmfDecoder.cpp  PmfReader.cpp  PmfWriter.cpp
pmf/test/: BitmapEncoder.cpp  BitmapEncoder.h  bitmappmf.cpp  pmfreader.cpp
vidbase/: CMakeLists.txt
vidbase/include/: EncodedFrame.h  VideoFrame.h  VideoStream.h  netutil.h
vidbase/src/: base.cc
videocodec/: CMakeLists.txt
videocodec/include/: ComponentImage.h  DirectoryReader.h  EncodedFrame.h  FrameCodec.h  FrameDecoder.h  JpegReader.h  PmfDecoder.h  PmfEncoder.h  PmfReader.h  PmfWriter.h  VideoFrame.h  VideoStream.h  YCCConverter.h  codecs.h  pmf.h  videoimage.h.h
videocodec/src/: BitmapCodec.cpp  BitmapDecoder.cpp  DirectoryReader.cpp  PmfCodec.cpp  PmfDecoder.cpp  PmfReader.cpp  PmfWriter.cpp  YCCConverter.cpp  base.cpp
videocodec/test/: teststring.cpp
videocodec/tools/: bitmappmf.cpp  dirlisttest.cpp  encodepmf.cpp  jpeg2bmp.cpp
